--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         
         <div class="imagen-2"></div>
           <div class="hero-centro">        
-            <button type="button"  id="btnCerrarPopUp"  class="btn btn-hero btn-lg" role="button">
+            <button type="button"  id="btnCerrarRespuestaCorrectaDiv"  class="btn btn-hero btn-lg" role="button">
               <span class="circle-boton">
                 <i class="fa fa1 fa-sign-out" style="font-size: 25px;"></i>
               </span>
