--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
 
     <div id="adminExcursionesCRUD">
       <div id="readListaExcursiones">
+        <h2>SECCION ADMINISTRADOR</h2>
         <table id="tablaAdminExcursiones">
           <thead>
             <th>Titulo</th>
@@ -346,6 +347,7 @@
           </thead>
           <tbody id="contenidoTablaAdminExcursiones"></tbody>
         </table>
+        <br><br><br><br>
         <button type="button" id="btnCrearNuevaExcursion">Crear Excursion</button>
         <button type="button" onclick="exportJSON()" id="btnDescargarJSON">Descargar JSON</button>
         <button type="button" id="btnAdminRegresarMenu">Regresar Menu</button>
@@ -353,47 +355,47 @@
       <div id="createExcursion">
         <form id="excursion">
           <h2>Crear Excursión</h2><br>
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-user icon"></i>
             <input id="titulo-exc" type="text" placeholder="Titulo" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-video-camera icon"></i>
             <input id="video-exc" type="text" placeholder="Url Video" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-file-text icon"></i>
             <input id="descripcion-exc" type="text" placeholder="Descripción" name="usrnm">
           </div>
 
-            <div class="input-container">
+            <div class="input-containerAdmin">
             <i class="fa fa-at icon"></i>
             <input id="creditos-exc" type="text" placeholder="Creditos" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-edit icon"></i>
             <input id="actividad-exc" type="text" placeholder="Actividad (Audio Url)" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-book icon"></i>
             <input id="opcion1-exc" type="text" placeholder="Opción 1 " name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-book icon"></i>
             <input id="opcion2-exc" type="text" placeholder="Opción 2 " name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-book icon"></i>
             <input id="opcion3-exc" type="text" placeholder="Opción 3 " name="usrnm">
           </div>
           
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-check icon"></i>
             <input id="respuesta-exc" type="text" placeholder="Respuesta Actividad" name="usrnm">
           </div>
@@ -406,47 +408,47 @@
       <div id="editExcursion">
         <form id="excursion1">
           <h2>Editar Excursión</h2><br>
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-user icon"></i>
             <input id="titulo-exc2" type="text" placeholder="Titulo" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-video-camera icon"></i>
             <input id="video-exc2" type="text" placeholder="Video" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-file-text icon"></i>
             <input id="descripcion-exc2" type="text" placeholder="Descripción" name="usrnm">
           </div>
 
-            <div class="input-container">
+            <div class="input-containerAdmin">
             <i class="fa fa-at icon"></i>
             <input id="creditos-exc2" type="text" placeholder="Creditos" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-edit icon"></i>
             <input id="actividad-exc2" type="text" placeholder="Actividad (audio)" name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-book icon"></i>
             <input id="opcion1-exc2" type="text" placeholder="Opción 1 " name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-book icon"></i>
             <input id="opcion2-exc2" type="text" placeholder="Opción 2 " name="usrnm">
           </div>
 
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-book icon"></i>
             <input id="opcion3-exc2" type="text" placeholder="Opción 3 " name="usrnm">
           </div>
           
-          <div class="input-container">
+          <div class="input-containerAdmin">
             <i class="fa fa-check icon"></i>
             <input id="respuesta-exc2" type="text" placeholder="Respuesta " name="usrnm">
           </div>
