--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
           <div class="input-containerAdmin">
             <i class="fa fa-edit icon"></i>
-            <input id="actividad-exc" type="text" placeholder="Actividad (Audio Url)" name="usrnm">
+            <input id="actividad-exc" type="file" placeholder="Actividad (Audio Url)" name="usrnm">
           </div>
 
           <div class="input-containerAdmin">
@@ -430,7 +430,7 @@
 
           <div class="input-containerAdmin">
             <i class="fa fa-edit icon"></i>
-            <input id="actividad-exc2" type="text" placeholder="Actividad (audio)" name="usrnm">
+            <input id="actividad-exc2" type="file" placeholder="Actividad (audio)" name="usrnm">
           </div>
 
           <div class="input-containerAdmin">
