--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
             <div id="videoExcursion">
               
               	<video id="videoExcursionCargar" class="video" controls="" >
-				        	
-			        	</video>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/noUFWkQNTKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>		        	
+		</video>
             		<!-- Controls -->
             		<h2></h2>
                 <div class="btnControles">     
