--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
           <div class="hero-centro3">
             <div id="videoExcursion">
               
-              	<video id="videoExcursionCargar" class="video" controls="" >
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/noUFWkQNTKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>		        	
-		</video>
+		<iframe id="videoExcursionCargar" width="560" height="315" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>	    
+              	
+		    <!--<video id="videoExcursionCargar" class="video" controls="" ></video>-->
             		<!-- Controls -->
             		<h2></h2>
                 <div class="btnControles">     
