--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="hero-centro3">
             <div id="videoExcursion">
               
-		<iframe id="videoExcursionCargar" class="video"  controls="" width="560" height="315" frameborder="0" allow="autoplay; encrypted-media"></iframe>	    
+		<iframe id="videoExcursionCargar" class="video"  controls="" width="560" height="315" frameborder="0" allowfullscreen=""></iframe>	    
               	
 		    <!--<video id="videoExcursionCargar" class="video" controls="" ></video>-->
             		<!-- Controls -->
