--- a/index.html
+++ b/index.html
@@ -209,15 +209,16 @@
 		    <!--<video id="videoExcursionCargar" class="video" controls="" ></video>-->
             		<!-- Controls -->
             		<h2></h2>
-                <div class="btnControles">     
+                   
 			<a href="#" onclick="playVideo();">Play</a>
 	                <a href="#" onclick="pauseVideo();">Pause</a>
 	                <a href="#" onclick="stopVideo();">Stop</a>
-                     <!--  <button type="button" class="play"> <i class="fa fa-play"> </i> </button>
+		    <!-- <div class="btnControles">  
+                      <button type="button" class="play"> <i class="fa fa-play"> </i> </button>
                        <button type="button" class="pause">  <i class="fa fa-pause"> </i></button>
                        <button type="button" class="stop">  <i class="fa fa-stop"> </i> </button>
-                       <button type="button" class="restart">  <i class="fa fa-reply"> </i> </button>-->
-                 </div>   
+                       <button type="button" class="restart">  <i class="fa fa-reply"> </i> </button>
+                 </div>-->   
               
            <!--   <iframe width="560" height="315" src="https://www.youtube.com/embed/noUFWkQNTKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
             </div>
