--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
             <img class="ima" src="image/editar-lista.png" alt="Smiley">
           </button>  
         </div>
-        <!--<div class="hero-centro-boton">   
+        <div class="hero-centro-boton">   
           <button type="button" id="btnJuegoListaExcursiones" class="btn warning w3-button w3-circle w3-black ima"  role="button">
             <img class="ima" src="image/lista.png" alt="Smiley">
           </button> 
-        </div>-->
+        </div>
        </div> 
     </div>
     
