--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <img class="ima" src="image/atras.png" alt="Smiley">
           </button>  
         </div>
-        <div class="hero-centro-boton">       
+        <div class="hero-izq-abajo">       
           <button type="button" id="btnJuegoVerExcursiones" class="btn warning w3-button w3-circle w3-black ima"  role="button">
             <img class="ima" src="image/editar-lista.png" alt="Smiley">
           </button>  
